dataset1235/2025-2/805158916/users/1651421245/executions/2651470117_48684178.log
== SUBMISSION (2025-08-27 03:04:32)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendasT= float(input("digite o total de vendas"))
lucro = vendasT*(30/100)
print(round(lucro,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
digite o total de vendas435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
digite o total de vendas210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
digite o total de vendas60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
digite o total de vendas135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
digite o total de vendas165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
digite o total de vendas568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:03:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendasT= float(input("Digite o total de vendas"))
lucro = vendas*(30/100)
print(round(lucro))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:03:27)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendasT= float(input("Digite o total de vendas"))
lucro = vendas*(30/100)
print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:02:59)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendasT= float(input("Digite o total de vendas"))
lucro = vendas*(30/100)
print(round(lucro))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:03:57)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendasT= float(input("Digite o total de vendas"))
lucro = vendasT*(30/100)
print(round(lucro,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Digite o total de vendas435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Digite o total de vendas210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Digite o total de vendas60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Digite o total de vendas135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Digite o total de vendas165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Digite o total de vendas568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:03:30)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendasT= float(input("Digite o total de vendas"))
lucro = vendas*(30/100)
print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro = vendas*(30/100)
            ^^^^^^
NameError: name 'vendas' is not defined. Did you mean: 'vendasT'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:03:54)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendasT= float(input("Digite o total de vendas"))
lucro = vendasT*(30/100)
print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Digite o total de vendas435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Digite o total de vendas210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Digite o total de vendas60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Digite o total de vendas135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Digite o total de vendas165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Digite o total de vendas568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
